--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input class="header--buscador" type="text" placeholder="¿Qué deseas buscar?">
                 <button class="header--search" type="submit"><img src="/img/Icone.png"></button>
             </div>
-            <button class="header--login" href="#" onclick="login">Login</button>
+            <button class="header--login" href="index.login.html" onclick="login">Login</button>
         </section>
     </header>
 
