--- a/screens/index.html
+++ b/screens/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraGeek</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/banner.css">
-    <link rel="stylesheet" href="css/productos.css">
-    <link rel="stylesheet" href="css/contacto.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="assets/reset.css">
+    <link rel="stylesheet" href="assets/header.css">
+    <link rel="stylesheet" href="assets/banner.css">
+    <link rel="stylesheet" href="assets/productos.css">
+    <link rel="stylesheet" href="assets/contacto.css">
+    <link rel="stylesheet" href="assets/footer.css">
 </head>
 <body>
     <header class="header">
@@ -20,7 +20,7 @@
                 <input class="header--buscador" type="text" placeholder="¿Qué deseas buscar?">
                 <button class="header--search" type="submit"><img src="/img/Icone.png"></button>
             </div>
-            <button class="header--login" href="index.login.html" onclick="login">Login</button>
+            <button class="header--login" href="screens/index.login.html" onclick="login">Login</button>
         </section>
     </header>
 
