--- a/screens/index.galeria.html
+++ b/screens/index.galeria.html
@@ -28,7 +28,7 @@
             <div class="categorias--encabezado">
                 <h2 class="categorias--titulo">Todos los Productos</h2>
                 <div class="categorias--link">
-                    <button class="galeria--agregar" href="#" onclick="login">Agregar Producto</button>    
+                    <a href="/screens/index.carrito.html"><button class="galeria--agregar" onclick="login">Agregar Producto</button></a>    
                 </div>
             </div>
             <div class="galeria">
@@ -293,6 +293,8 @@
             </div>
         </section>
     </footer>
+
+    <script src="/controllers/productos-controllers.js"></script>
     
 </body>
 </html>
