--- a/screens/index.html
+++ b/screens/index.html
@@ -18,9 +18,9 @@
             <img class="header--img" src="/img/Logo.png" alt="logo-alurageek">
             <div class="header--contenido">
                 <input class="header--buscador" type="text" placeholder="¿Qué deseas buscar?">
-                <button class="header--search" type="submit"><img src="/img/Icone.png"></button>
+                <img class="header--search" type="submit" src="/img/Icone.png">
             </div>
-            <button class="header--login" href="/screens/index.login.html" onclick="login">Login</button>
+            <a href="/screens/index.login.html"><button class="header--login" type="submit" onclick="login">Login</button></a>
         </section>
     </header>
 
@@ -33,140 +33,140 @@
             <div class="categorias--encabezado">
                 <h2 class="categorias--titulo">Star Wars</h2>
                 <div class="categorias--link">
-                    <p class="categorias--enlace" href="/screens/index.galeria.html">Ver todo</p>    
-                    <img class="categorias--enlace--img" src="/img/arrow_back_black_24dp 1.png" href="/screens/index.galeria.html">
+                    <a class="categorias--enlace" href="/screens/index.galeria.html">Ver todo</a>    
+                    <img class="categorias--enlace--img" src="/img/arrow_back_black_24dp 1.png">
                 </div>
             </div>
-            <!-- <div class="productos">
+            <div class="productos">
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/StarWars1.png">
                     <h3 class="producto--titulo">StarWars XYZ</h3>
                     <p class="producto--precio">$60,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/StarWars2.png">
                     <h3 class="producto--titulo">StarWars XYZ</h3>
                     <p class="producto--precio">$60,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/StarWars3.png">
                     <h3 class="producto--titulo">StarWars XYZ</h3>
                     <p class="producto--precio">$60,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/StarWars4.png">
                     <h3 class="producto--titulo">StarWars XYZ</h3>
                     <p class="producto--precio">$60,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/StarWars5.png">
                     <h3 class="producto--titulo">StarWars XYZ</h3>
                     <p class="producto--precio">$60,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/StarWars6.png">
                     <h3 class="producto--titulo">StarWars XYZ</h3>
                     <p class="producto--precio">$60,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
-            </div> -->
+            </div>
             
             <div class="categorias--encabezado">
                 <h2 class="categorias--titulo">Consolas</h2>
                 <div class="categorias--link">
-                    <p class="categorias--enlace" href="#">Ver todo</p>    
-                    <img class="categorias--enlace--img" src="/img/arrow_back_black_24dp 1.png" href="/screens/index.galeria.html">
+                    <a class="categorias--enlace" href="/screens/index.galeria.html">Ver todo</a>    
+                    <img class="categorias--enlace--img" src="/img/arrow_back_black_24dp 1.png">
                 </div>
             </div>
-            <!-- <div class="productos">
+            <div class="productos">
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/Consolas1.png">
                     <h3 class="producto--titulo">Consolas XYZ</h3>
                     <p class="producto--precio">$80,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/Consolas2.png">
                     <h3 class="producto--titulo">Consolas XYZ</h3>
                     <p class="producto--precio">$80,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/Consolas3.png">
                     <h3 class="producto--titulo">Consolas XYZ</h3>
                     <p class="producto--precio">$80,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/Consolas4.png">
                     <h3 class="producto--titulo">Consolas XYZ</h3>
                     <p class="producto--precio">$80,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/Consolas5.png">
                     <h3 class="producto--titulo">Consolas XYZ</h3>
                     <p class="producto--precio">$80,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/Consolas6.png">
                     <h3 class="producto--titulo">Consolas XYZ</h3>
                     <p class="producto--precio">$80,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
-            </div> -->
+            </div>
 
             <div class="categorias--encabezado">
                 <h2 class="categorias--titulo">Accesorios</h2>
                 <div class="categorias--link">
-                    <p class="categorias--enlace" href="#">Ver todo</p>    
-                    <img class="categorias--enlace--img" src="/img/arrow_back_black_24dp 1.png" href="#">
+                    <a class="categorias--enlace" href="/screens/index.galeria.html">Ver todo</a>    
+                    <img class="categorias--enlace--img" src="/img/arrow_back_black_24dp 1.png">
                 </div>
             </div>
-            <!-- <div class="productos">
+            <div class="productos">
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/Otros1.png">
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
                     <p class="producto--precio">$30,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/Otros2.png">
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
                     <p class="producto--precio">$30,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/Otros3.png">
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
                     <p class="producto--precio">$30,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/Otros4.png">
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
                     <p class="producto--precio">$30,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/Otros5.png">
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
                     <p class="producto--precio">$30,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
                 <div class="productos--contenedor">
                     <img class="producto--img" src="/img/Otros6.png">
                     <h3 class="producto--titulo">Accesorios XYZ</h3>
                     <p class="producto--precio">$30,00</p>
-                    <button class="producto--boton" href="/screens/index.galeria.html" id=${id}>Ver producto</button>
+                    <a href="/screens/index.galeria.html"><button class="producto--boton"  id=${id}>Ver producto</button></a>
                 </div>
-            </div> -->
+            </div>
         </section>
 
         <section class="contacto">
@@ -187,10 +187,10 @@
             </div>
             <div class="contacto--formulario">
                 <h2 class="contacto--titulo">Hable con Nosotros</h2>
-                <form class="contacto--form">
+                <form class="contacto--form" data-form>
                     <label class="contacto--label" for="text">Nombre y Apellido</label>
-                    <input class="contacto--input" name="name" id="name" type="text" required>
-                    <textarea class="contacto--textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Escribe tu mensaje"></textarea>
+                    <input class="contacto--input" name="name" id="name" type="text" required pattern="^[\s\S]{0,50}$" data-tipo="nombre">
+                    <textarea class="contacto--textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Escribe tu mensaje" required pattern="^[\s\S]{0,300}$" data-tipo="mensaje"></textarea>
                     <button class="contacto--boton" type="submit" href="#">Enviar Mensaje</button>
                 </form>
             </div>
